--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
   },
   "dependencies": {
     "fontkit": "1.8.0",
-    "pdfkit": "^0.11.0"
+    "grapheme-splitter": "^1.0.4",
+    "pdfkit": "^0.11.0",
+    "svg-to-pdfkit": "^0.1.8",
+    "utf-info": "^1.0.2"
   },
   "devDependencies": {
     "nodemon": "1.18.4"
